[gd_scene load_steps=2 format=3 uid="uid://cvagr7imktyhf"]

[ext_resource type="Script" uid="uid://xkwwtfyxgkcw" path="res://multiplayer_controller.gd" id="1_m4p4h"]

[node name="Multiplayer Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4p4h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 8
text = "host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 36.0
offset_right = 208.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 8
text = "JOIN"

[node name="singleplayer" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 64.0
offset_right = 208.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 8
text = "SINGLEPLAYER"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -48.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 8
text = "
"
scroll_following = true
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="singleplayer" to="." method="_on_singleplayer_pressed"]
